<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WorkDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/work_detail_back_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/baloo"
            android:text="@string/work_order_detail"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/work_detail_delete_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/delete_icon"/>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/date_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/black_border">

                <TextView
                    android:id="@+id/work_detail_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:text="@string/date_text" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/new_company_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/black_border">

                <TextView
                    android:id="@+id/work_detail_customer_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_text"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/job_detail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/work_jobs_details_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLength="300"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/hardware_list" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/work_hardware_detail_list_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLength="300"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/working_hours" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/work_hour_detail_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/travel_time" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border"
                android:layout_marginTop="5dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/work_travel_detail_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_black"
                    android:layout_marginLeft="10dp"
                    android:text="@string/work_travel"/>

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/work_travel_detail_label">

                    <RadioButton
                        android:id="@+id/radio_yes_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/yes"/>
                    <RadioButton
                        android:id="@+id/radio_no_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/no"/>

                </RadioGroup>

            </RelativeLayout>

            <Button
                android:id="@+id/customer_work_detail_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:text="@string/view_work_update_btn"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>